Prevent layout shift when locking mobile sidebar scroll

--- a/FoodDiary.Web.Client/src/styles.scss
+++ b/FoodDiary.Web.Client/src/styles.scss
@@ -36,6 +36,8 @@ body {
 }
 
 body.fd-scroll-lock {
+    position: fixed;
+    inline-size: 100%;
     overflow: hidden;
 }
 
